# RandomTouHou

./: .gitignore
backend/: pyproject.toml  serve.py
frontend/: README.md  launch.json  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: PageIndex.vue  PageTemplate.vue
